# QuotaBar

./: .gitignore  LICENSE  Package.swift  QUICKSTART.en.md  QUICKSTART.md  README.en.md  README.md  TODO.en.md  TODO.md  build.sh  install.sh  setup.sh
QuotaBar/: AppDelegate.swift  Info.plist  QuotaBarApp.swift
QuotaRadar/: AppDelegate.swift  Info.plist  QuotaRadarApp.swift
Tests/: run_behavior_tests.sh
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: lib.rs
apps/desktop-tauri/src-tauri/src/commands/: app_state.rs  auth.rs  auth_tests.rs  mod.rs  providers.rs  updates.rs
apps/desktop-tauri/src-tauri/src/domain/: mod.rs  settings.rs  tests.rs  update.rs
apps/desktop-tauri/src-tauri/src/platform/: tests.rs  tray.rs
apps/desktop-tauri/src-tauri/src/providers/: bocha_tests.rs  brave.rs  brave_tests.rs  deepseek.rs  exa.rs  exa_tests.rs  http.rs  kimi_subscription_tests.rs  mod.rs  opencode_go.rs  opencode_go_tests.rs  registry.rs  serpapi.rs  serpapi_tests.rs  serper.rs  serper_tests.rs  tavily.rs  tencent_cloud_coding_plan.rs  tencent_cloud_coding_plan_tests.rs  tests.rs  volcengine_coding_plan.rs  volcengine_coding_plan_tests.rs  wxmp.rs  wxmp_tests.rs  xfyun_coding_plan.rs  xfyun_coding_plan_tests.rs
apps/desktop-tauri/src-tauri/src/scheduler/: mod.rs  refresh_scheduler.rs  tests.rs
apps/desktop-tauri/src-tauri/src/storage/: metadata_store_tests.rs  migration.rs  migration_io_tests.rs  migration_tests.rs  mod.rs  secret_store.rs  secret_store_tests.rs
docs/: desktop-tauri-implementation-plan.md  desktop-tauri-parity-checklist.md  desktop-tauri-release.md  provider-capabilities.en.md  provider-capabilities.md  tauri-provider-migration-checklist.md
scripts/: check_tauri_sources.sh  generate_app_icon.swift  generate_calm_icon_options.swift  generate_icon_options.swift  generate_quota_anxiety_icon_options.swift  package_dmg.sh  qa_tauri_macos_screenshots.sh  sign_tauri_macos_app.sh  (+2 more)
(+95 files in other folders)
