[package]
name = "quotaradar-desktop-tauri"
version = "0.0.0"
description = "Quota Radar cross-platform desktop preview"
authors = ["Asklear"]
edition = "2021"

[lib]
name = "quotaradar_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tauri-plugin-store = "2"
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "socks", "system-proxy"] }
plist = "1.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
